# rust-axum-base-project

./: .env  .env.dev  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: logger.rs  main.rs  router.rs
src/config/: database.rs  mod.rs  router.rs
src/controllers/: user.rs
src/models/: user.rs
