[package]
name = "rust-axum-base-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
dotenvy = "0.15"
axum = { version = "0.5" }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3", features = ["cors"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4" # Used for setting DateTimes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.2" }
bson = { version = "2", features = ["chrono-0_4"] }